--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "18.2.0",
     "react-native": "0.74.3",
-    "react-native-linear-gradient": "^2.8.3"
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-svg": "^15.4.0",
+    "react-native-reanimated": "3.14.0",
+    "react-native-gesture-handler": "2.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
