--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.32.0",
     "react-native-svg": "^15.4.0",
-    "react-native-vector-icons": "^10.1.0"
+    "react-native-vector-icons": "^10.1.0",
+    "@react-navigation/stack": "6.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
