--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "6.4.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "2.17.1",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
